# hiyoko-viewer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  check_formats.py  constants.py  generate_reg_entries.py  hiyoko-viewer.spec  image_viewer.py  main.py  main.spec  make_build.bat  pyproject.toml  register_app.reg  requirements-build.txt  requirements-dev.txt  requirements.txt  widgets.py  worker.py
.github/workflows/: quality.yml
HiyokoViewer/: App.xaml  App.xaml.cs  HiyokoViewer.csproj  HiyokoViewer.sln  MainWindow.xaml  MainWindow.xaml.cs
scripts/: check.ps1  check_formats.py  generate_reg_entries.py  install-windows.ps1
src/: main.rs
src/hiyoko_viewer/: __init__.py  __main__.py  app.py
src/hiyoko_viewer/assets/: __init__.py
src/hiyoko_viewer/config/: constants.py
src/hiyoko_viewer/core/: metadata.py  resources.py  sorting.py
src/hiyoko_viewer/services/: image_loader.py
src/hiyoko_viewer/ui/: main_window.py
src/hiyoko_viewer/ui/dialogs/: metadata_dialog.py
src/hiyoko_viewer/ui/mixins/: input.py  navigation.py  rendering.py
tests/: test_check_formats.py  test_constants.py  test_generate_reg_entries.py  test_image_loader_read.py  test_image_viewer_methods.py  test_main.py  test_metadata.py  test_smoke.py  test_sorting.py  test_widgets.py  test_worker.py
